# tmines

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  LICENSE.md  README.md  controller.cpp  controller.hpp  display.cpp  display.hpp  makefile  minefield.cpp  minefield.hpp  mines.cpp
doc/: CMakeLists.txt  autodiscover.md  class_design.md  doc.md  doxygen.in  error_reporting.md  index.md  iodevice.md  man.md  rendering.md
man/: CMakeLists.txt  tmines.1  tmines.6
src/: config.h.in  controller.cpp  controller.hpp  display.cpp  display.hpp  inputdevice.hpp  inputdevice_curses.cpp  inputdevice_curses.hpp  inputdevice_string.cpp  inputdevice_string.hpp  iodevice.hpp  iodevice_curses.cpp  iodevice_curses.hpp  iodevice_simulation.cpp  iodevice_simulation.hpp  iodevice_string.cpp  iodevice_string.hpp  minefield.cpp  minefield.hpp  mines.cpp  tmines.cpp
test/: CMakeLists.txt  controller.cpp  display.cpp  iodevice_simulation.cpp  minefield.cpp
